--- a/_posts/2025-06-09-awkward.markdown
+++ b/_posts/2025-06-09-awkward.markdown
@@ -12,7 +12,7 @@ are similar to numpy arrays, but allow different numbers to elements in each row
 installed from either conda (as `awkward`) or the Ubuntu repositories (as `python3-awkward`). Here
 is an example:
 
-```
+```python
 import awkward
 
 a = awkward.Array([[1, 2, 3], [4], [5, 6, 7, 1, 2], [32, 90]])
@@ -26,7 +26,7 @@ type error message.
 One of the more interesting features of Awkward arrays is that the [Numba](https://numba.pydata.org/) JIT compiler 
 can deal with them. For example:
 
-```
+```python
 import awkward
 from numba import njit
 
@@ -56,13 +56,13 @@ the kealib sources.
 With the Python module comes a small command line program called `kea_build_neighbours` that calculates the neighbours 
 of a file and stores them in the file (also available in the [`kealib.build_neighbours`](https://kealib.org/python/kealib/build_neighbours.html)
 module):
-```
+```bash
 kea_build_neighbours --infile /tmp/classes.kea
 ```
 
 Note that it is expected that the file already has the histogram calculated. This is normally done by RIOS (or the `rioscalcstats`
 command line program) or `pyshepseg`. Once the neighbours are built they can be retrieved from Python as an awkward array:
-```
+```python
 from osgeo import gdal
 from kealib import extrat
 
